Adds events bypass support and sudoers template
Added template (which is only a file) for sudoers cofiguration
Added support for bypassing sending events

--- a/templates/megaraid.yaml.j2
+++ b/templates/megaraid.yaml.j2
@@ -7,6 +7,8 @@
 
 init_config:
   megacli_path: /usr/sbin/megacli
+  adapter_events: {{ datadog_megaraid_adapter_events }}
+  disk_events: {{ datadog_megaraid_disk_events }}
 
 instances:
   - adapter: ALL
